[tool.poetry]
name = "plot_ocr"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<3.8"
paddlepaddle = { version = "2.4.2", source = "baidu" }
paddleocr = "^2.6.1.3"


[[tool.poetry.source]]
name = "baidu"
url = "https://mirror.baidu.com/pypi/simple"
default = false
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
